# guided-syntesis-tool

./: guided_syntesis.py  pyproject.toml
archive/: titane_sole-first_exp.py  titane_sole-second_exp.py  titane_sole-third.py  titane_sole_PCA-first_exp.py  titane_sole_PCA-second_exp.py
archive/third_dataset/: Random forest content.eps  XGboost content.eps  XGboost days of stability.eps
artifacts/third_dataset/: Diameter shap.eps  Gradient boost content.eps  Gradient boost days of stability.eps  Gradient boost diameter.eps  Random forest days of stability.eps  Random forest diameter.eps  XGboost diameter.eps
data/: titanium sols.xlsx
