[project]
name = "titan-sole"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastexcel>=0.16.0",
    "marimo[mcp]>=0.16.5",
    "matplotlib>=3.10.6",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "shap>=0.48.0",
    "watchdog>=6.0.0",
    "xgboost>=3.0.5",
]

[tool.marimo.runtime]
watcher_on_save = "autorun"
